--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,9 @@
+require: rubocop-rspec
+
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.0
+  NewCops: enable
+  SuggestExtensions: false
 
 Style/StringLiterals:
   Enabled: true
@@ -10,4 +14,7 @@ Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
 
 Layout/LineLength:
-  Max: 120
+  Max: 160
+
+RSpec/FilePath:
+  Enabled: false
