Add support for proginfo.json files
Move Modinfo into Baseinfo inheritable class


Add support for `proginfo.json` files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,9 @@ Metrics/AbcSize:
   Exclude:
     - lib/icarus/mod/cli/*.rb # Thor command files
 
+Metrics/ClassLength:
+  Enabled: false
+
 Metrics/MethodLength:
   Max: 50
 
