--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [audit]
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v2
+      - uses: google-github-actions/release-please-action@v3
         id: release
         with:
           release-type: ruby
           package-name: Icarus-Mod-Tools
           bump-minor-pre-major: true
+          skip-github-release: true
           version-file: "lib/icarus/mod/version.rb"
       # Checkout code if release was created
       - uses: actions/checkout@v2
